// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AxisLabel [common] example testing should match snapshot(s) for basic 1`] = `
<text
  className="lucid-AxisLabel"
  dy="1em"
  style={
    Object {
      "fill": "#000",
    }
  }
  transform="rotate(-90)"
  x={-200}
  y={0}
>
  Left
</text>
`;

exports[`AxisLabel [common] example testing should match snapshot(s) for basic 2`] = `
<text
  className="lucid-AxisLabel lucid-AxisLabel-color-chart-0"
  dy="-.32em"
  style={Object {}}
  transform="rotate(-90)"
  x={-200}
  y={50}
>
  Right
</text>
`;

exports[`AxisLabel [common] example testing should match snapshot(s) for basic 3`] = `
<text
  className="lucid-AxisLabel lucid-AxisLabel-color-chart-1"
  dy="-.32em"
  style={Object {}}
  transform=""
  x={500}
  y={50}
>
  Bottom
</text>
`;

exports[`AxisLabel [common] example testing should match snapshot(s) for basic 4`] = `
<text
  className="lucid-AxisLabel lucid-AxisLabel-color-chart-2"
  dy="1em"
  style={Object {}}
  transform=""
  x={500}
  y={0}
>
  Top
</text>
`;
